@@ -1,5 +1,9 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+==10/24/2011==
+Akkadius: Mysql CLI changes
+Akkadius: Preliminary work to some future additions, added int32 Database::GetGuildDBIDByCharID(int32 char_id)
+
 ==10/23/2011==
 Akkadius: Another memory leak in parser.cpp, NewEventList never deallocated
 Akkadius: Reduced code checking redundancy in several places regarding functions that reference ExecWeaponProc, only valid invalid spells are checked and logged.
